--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400&display=swap');
+
+
+
+
+* {
+  font-family: 'Roboto Condensed', sans-serif;  
+  /* font-weight: 350; */
+}
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+em {
+  font-weight: 600;
+  font-style: normal;
 }
 
 .App-logo {
@@ -36,3 +53,4 @@
     transform: rotate(360deg);
   }
 }
+
